--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,6 @@ src/merger/input/*.pdf
 src/merger/output/*.pdf
 src/splitter/input/*.pdf
 src/splitter/output/*.pdf
-src/jupyter_notebooks/*.pdf
-src/jupyter_notebooks/*.png
+src/jupyter_notebooks/input/*.pdf
+src/jupyter_notebooks/input/*.png
+src/jupyter_notebooks/output/*.pdf
