--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,12 @@ __pycache__/
 inputFiles/*.pdf
 dist/
 build/
+
+# ignore input / output folders
+src/merger/input/*.pdf
+src/merger/output/*.pdf
+src/splitter/input/*.pdf
+src/splitter/output/*.pdf
+src/jupyter_notebooks/input/*.pdf
+src/jupyter_notebooks/input/*.png
+src/jupyter_notebooks/output/*.pdf
