feat: build wails UI for pdf merger.

--- a/pdf_wizard/.gitignore
+++ b/pdf_wizard/.gitignore
@@ -1,3 +1,7 @@
-build/bin
+# Ignore binaries in bin, but allow .app bundles (macOS app bundles)
+build/bin/*
+!build/bin/*.app
+!build/bin/*.app/**
+
 node_modules
 frontend/dist
