--- a/pdf_wizard/frontend/package.json
+++ b/pdf_wizard/frontend/package.json
@@ -15,7 +15,9 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "styled-components": "^6.1.8"
   },
