--- a/.github/workflows/pdf_wizard.yml
+++ b/.github/workflows/pdf_wizard.yml
@@ -30,7 +30,31 @@ jobs:
           go-version: '1.22'
           cache-dependency-path: pdf_wizard/go.sum
 
-      - name: Install dependencies
+      - name: Install Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+          cache: 'npm'
+          cache-dependency-path: pdf_wizard/frontend/package-lock.json
+
+      - name: Install frontend dependencies
+        working-directory: pdf_wizard/frontend
+        run: npm ci
+
+      - name: Build frontend
+        working-directory: pdf_wizard/frontend
+        run: npm run build
+
+      - name: Verify frontend build
+        working-directory: pdf_wizard
+        run: |
+          if [ ! -d "frontend/dist" ]; then
+            echo "Error: frontend/dist directory not found after build"
+            exit 1
+          fi
+          echo "Frontend build verified: frontend/dist exists"
+
+      - name: Install Go dependencies
         working-directory: pdf_wizard
         run: |
           go mod download
