--- a/.github/workflows/pdf_wizard_frontend_e2e_tests.yml
+++ b/.github/workflows/pdf_wizard_frontend_e2e_tests.yml
@@ -38,13 +38,22 @@ jobs:
       - name: Install Playwright browsers
         working-directory: pdf_wizard/frontend
         run: npx playwright install --with-deps chromium
+        env:
+          PLAYWRIGHT_BROWSERS_PATH: 0  # Install to system location
+
+      - name: Verify Playwright installation
+        working-directory: pdf_wizard/frontend
+        run: npx playwright --version
 
       - name: Run E2E tests
         working-directory: pdf_wizard/frontend
         env:
           # Suppress git commit info warning in CI
           CI: true
+          # Increase timeout for CI environments
+          PLAYWRIGHT_TIMEOUT: 60000
         run: npm run test:e2e
+        continue-on-error: false
 
       - name: Upload test results
         if: always()
