--- a/.github/workflows/pdf_wizard_frontend_e2e_tests.yml
+++ b/.github/workflows/pdf_wizard_frontend_e2e_tests.yml
@@ -35,15 +35,32 @@ jobs:
         working-directory: pdf_wizard/frontend
         run: npm ci
 
-      - name: Install Playwright browsers
-        working-directory: pdf_wizard/frontend
-        run: npx playwright install --with-deps chromium
-        env:
-          PLAYWRIGHT_BROWSERS_PATH: 0  # Install to system location
+      - name: Install Playwright system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            libnss3 \
+            libnspr4 \
+            libatk1.0-0 \
+            libatk-bridge2.0-0 \
+            libcups2 \
+            libdrm2 \
+            libdbus-1-3 \
+            libxkbcommon0 \
+            libxcomposite1 \
+            libxdamage1 \
+            libxfixes3 \
+            libxrandr2 \
+            libgbm1 \
+            libasound2 \
+            libatspi2.0-0 \
+            libxshmfence1
 
-      - name: Verify Playwright installation
+      - name: Install Playwright Browsers
         working-directory: pdf_wizard/frontend
-        run: npx playwright --version
+        run: |
+          npx playwright install chromium
+          npx playwright --version
 
       - name: Run E2E tests
         working-directory: pdf_wizard/frontend
