--- a/.github/workflows/pdf_wizard_frontend_e2e_tests.yml
+++ b/.github/workflows/pdf_wizard_frontend_e2e_tests.yml
@@ -35,31 +35,10 @@ jobs:
         working-directory: pdf_wizard/frontend
         run: npm ci
 
-      - name: Install Playwright system dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            libnss3 \
-            libnspr4 \
-            libatk1.0-0 \
-            libatk-bridge2.0-0 \
-            libcups2 \
-            libdrm2 \
-            libdbus-1-3 \
-            libxkbcommon0 \
-            libxcomposite1 \
-            libxdamage1 \
-            libxfixes3 \
-            libxrandr2 \
-            libgbm1 \
-            libasound2 \
-            libatspi2.0-0 \
-            libxshmfence1
-
-      - name: Install Playwright Browsers
+      - name: Install Playwright Browsers and Dependencies
         working-directory: pdf_wizard/frontend
         run: |
-          npx playwright install chromium
+          npx playwright install --with-deps chromium
           npx playwright --version
 
       - name: Run E2E tests
