--- a/.github/workflows/pdf_wizard_frontend_e2e_tests.yml
+++ b/.github/workflows/pdf_wizard_frontend_e2e_tests.yml
@@ -17,8 +17,16 @@ permissions:
 
 jobs:
   test:
-    name: Frontend E2E Tests
+    name: Frontend E2E Tests - ${{ matrix.test-file }}
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        test-file:
+          - 'app.spec.ts'
+          - 'components.spec.ts'
+          - 'tabs.spec.ts'
+          - 'i18n.spec.ts'
 
     steps:
       - name: Checkout code
@@ -48,22 +56,5 @@ jobs:
           CI: true
           # Increase timeout for CI environments
           PLAYWRIGHT_TIMEOUT: 60000
-        run: npm run test:e2e
+        run: npx playwright test e2e/${{ matrix.test-file }}
         continue-on-error: false
-
-      - name: Upload test results
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: playwright-report
-          path: pdf_wizard/frontend/playwright-report/
-          retention-days: 30
-
-      - name: Upload test results (screenshots)
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: playwright-test-results
-          path: pdf_wizard/frontend/test-results/
-          retention-days: 30
-
